--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+#Config
+config
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -70,6 +73,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
+dev.env
 .env
 .env.test
 .env.production
